Version CVS HEAD

  * fixed compilation with older gcc versions
  * added German translation
  * reworked instrument properties dialog - properties can now be
    edited
  * restructured dimension region editor for elements to be in a more
    logical and intuitive order
  * added Makefile.cvs (just for standard compliance with other projects)
  * added Debian packaging infrastructure
  * implemented sample loop editing
  * improved labels in dimension region editor
  * use normal layout for checkboxes
  * allow to resize dimension zones even when the respective dimension has
    no custom dimension splits yet
  * moved instrument editor into a shared library 'libgigedit', the 'gigedit'
    binary is now just calling that shared library
  * implemented an "instrument editor plugin" for LinuxSampler to allow
    on-the-fly instrument editing within the sampler's own process
    (revised directories to a more automake-friendly structure for this, to
    avoid compilation and install errors)
  * added quick start documentation by Alexander Methke
  * a changed file is now marked with an asterisk in the window title
  * added close confirmation dialog, shown if file is changed
  * "save" means "save as" for new files
  * enabled acceleration keys
  * add .gig to filename in "save as" if it's not already there
  * filename character encodings other than utf-8 supported

Version 0.0.3 (2007-03-24)

  * first release of gigedit